infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              service:
                name: posts-cluster-srv
                port: 
                  number: 4000
            pathType: ImplementationSpecific
          - path: /posts
            backend:
              service:
                name: query-cluster-srv
                port: 
                  number: 4002
            pathType: ImplementationSpecific
          - path: /posts/?(.*)/comments
            backend:
              service:
                name: comments-cluster-srv
                port: 
                  number: 4001
            pathType: ImplementationSpecific
          - path: /?(.*)
            backend:
              service:
                name: client-cluster-srv
                port: 
                  number: 3000
            pathType: ImplementationSpecific
